--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "docker>=7.1.0",
     "cryptography>=42.0.0",
     "openai",
+    "wandb<=0.22.2"
 ]
 
 [project.optional-dependencies]
